--- a/index.html
+++ b/index.html
@@ -6,6 +6,33 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <nav>
+            <a href="">compétences</a>
+            <a href="">projets</a>
+            <a href="">contact et reseaux sociaux</a>
+        </nav>
+        <div id="whoAmI">
+            <h1>Diwan<br>Schneider</h1>
+            <h2>developpeur web junior</h2>
+            <p>Developpeur junior qui sors de formation, cela fait maintenant presque 1 an que je suis rentré dans le monde du dev et que je m'epanoui dans celu-ci. J'ai d'abord commencé en autodidacte avec le HTML/CSS puis j'ai vite senti le besoin d'aller plus vite et plus loin dans ce domaine. C'est alors que j'ai rejoins la formation developpeur web de OpenClassRooms en aout 2022.</p>
+        </div>
+    </header>
+
+    <section id="skills">
+
+    </section>
+
+    <section id="projets">
+
+    </section>
+
+    <section id="formations">
+
+    </section>
     
+    <section id="contact&rs">
+
+    </section>
 </body>
 </html>
