header et whoAmI fini

--- a/index.html
+++ b/index.html
@@ -3,19 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>PortFolio Diwan SCHNEIDER</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <nav>
-            <a href="">compétences</a>
-            <a href="">projets</a>
-            <a href="">contact et reseaux sociaux</a>
+            <ul>
+                <li><a href="">Compétences</a></li>
+                <li><a href="">Projets</a></li>
+                <li><a href="">Contact & Reseaux Sociaux</a></li>
+            </ul>
         </nav>
         <div id="whoAmI">
-            <h1>Diwan<br>Schneider</h1>
-            <h2>developpeur web junior</h2>
-            <p>Developpeur junior qui sors de formation, cela fait maintenant presque 1 an que je suis rentré dans le monde du dev et que je m'epanoui dans celu-ci. J'ai d'abord commencé en autodidacte avec le HTML/CSS puis j'ai vite senti le besoin d'aller plus vite et plus loin dans ce domaine. C'est alors que j'ai rejoins la formation developpeur web de OpenClassRooms en aout 2022.</p>
+            <h1 class="prenom">Diwan</h1>
+            <h2 class="nom">SCHNEIDER</h2>
+            <h2 class="work">developpeur web junior</h2>
+            <p class="presentation">Developpeur junior qui sors de formation, cela fait maintenant presque 1 an que je suis rentré dans le monde du dev et que je m'epanoui dans celu-ci. J'ai d'abord commencé en autodidacte avec le HTML/CSS puis j'ai vite senti le besoin d'aller plus vite et plus loin dans ce domaine. C'est alors que j'ai rejoins la formation developpeur web de OpenClassRooms en aout 2022.</p>
         </div>
     </header>
 
@@ -30,9 +37,9 @@
     <section id="formations">
 
     </section>
-    
-    <section id="contact&rs">
 
-    </section>
+    <footer id="contact&rs">
+
+    </footer>
 </body>
 </html>
