--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/c1aac56362.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
@@ -27,11 +28,27 @@
     </header>
 
     <section id="skills">
-
+        <h2 class="skillsTitle">COMPÉTENCES</h2>
+        <h2 class="skillsTitleBack">front-end & back-end</h2>
+        <div class="cardLine">
+            <div class="skillCard"><i class="fa-brands fa-square-js fa-6x" style="color: #f7df1e;"></i><span class="spanSkills">Javascript</span></div>
+            <div class="skillCard"><i class="fa-brands fa-react fa-6x" style="color: #61dbfb;"></i><span class="spanSkills">React</span></div>
+            <div class="skillCard"><i class="fa-brands fa-sass fa-6x" style="color: #cd6799;"></i><span class="spanSkills">Sass</span></div>
+        </div>
+        <div class="cardLine">
+            <div class="skillCard"><i class="fa-brands fa-node-js fa-6x" style="color: #3c873a;"></i><span class="spanSkills">NodeJs</span></div>
+            <div class="skillCard">
+                <div class="divGit"> <a href="https://github.com/Diwans" target="_blank"><i class="fa-brands fa-git-alt fa-6x" style="color: #f1502f;"></i><i class="fa-brands fa-github fa-6x" style="color: #000000;"></i>
+                </div><span class="spanSkills">Git/GitHub</span></a>
+            </div>
+            <div class="skillCard"><i class="fa-brands fa-angular fa-6x" style="color: #b52e31;"></i><span class="spanSkills">Angular</span></div>
+        </div>
     </section>
 
     <section id="projets">
-
+        <div id="projetJS">sophie bluel</div>
+        <div id="projetReact">kasa</div>
+        <div id="projetNodejs">Mon vieux grimoire</div>
     </section>
 
     <section id="formations">
