--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#skill7">Compétences</a></li>
+                <li><a href="#skills">Compétences</a></li>
                 <li><a href="#projets">Projets</a></li>
-                <li><a href="">Contact & Reseaux Sociaux</a></li>
+                <li><a href="#formations">Formations</a></li>
+                <li><a href="#contact&rs">Contact & Reseaux Sociaux</a></li>
             </ul>
         </nav>
         <div id="whoAmI">
@@ -30,18 +31,44 @@
     <section id="skills">
         <h2 class="skillsTitle">COMPÉTENCES</h2>
         <h2 class="skillsTitleBack">front-end & back-end</h2>
+
         <div class="cardLine">
-            <div class="skillCard"><i class="fa-brands fa-square-js fa-7x" style="color: #f7df1e;"></i><span class="spanSkills">Javascript</span></div>
-            <div class="skillCard"><i class="fa-brands fa-react fa-7x" style="color: #61dbfb;"></i><span class="spanSkills">React</span></div>
-            <div class="skillCard"><i class="fa-brands fa-sass fa-7x" style="color: #cd6799;"></i><span class="spanSkills">Sass</span></div>
-        </div>
-        <div class="cardLine">
-            <div class="skillCard"><i class="fa-brands fa-node-js fa-7x" style="color: #3c873a;"></i><span class="spanSkills">NodeJs</span></div>
+
             <div class="skillCard">
-                <div class="divGit"> <a href="https://github.com/Diwans" target="_blank"><i class="fa-brands fa-git-alt fa-7x" style="color: #f1502f;"></i><i class="fa-brands fa-github fa-7x" style="color: #000000;"></i>
-                </div><span class="spanSkills">Git/GitHub</span></a>
+                <a href="#projetJs"><i class="fa-brands fa-square-js fa-7x" style="color: #f7df1e;"></i></a>
+                <span class="spanSkills">Javascript</span>
             </div>
-            <div class="skillCard"><i class="fa-brands fa-angular fa-7x" style="color: #b52e31;"></i><span class="spanSkills">Angular</span></div>
+
+            <div class="skillCard">
+                <a href="#projetReact"><i class="fa-brands fa-react fa-7x" style="color: #61dbfb;"></i></a>
+                <span class="spanSkills">React</span>
+            </div>
+
+            <div class="skillCard">
+                <i class="fa-brands fa-sass fa-7x" style="color: #cd6799;"></i>
+                <span class="spanSkills">Sass</span></div>
+            </div>
+
+        <div class="cardLine">
+
+            <div class="skillCard">
+                <a href="#projetNodejs"><i class="fa-brands fa-node-js fa-7x" style="color: #3c873a;"></i></a>
+                <span class="spanSkills">NodeJs</span></div>
+
+            <div class="skillCard">
+                <div class="divGit">
+                    <a href="https://github.com/Diwans" target="_blank">
+                        <i class="fa-brands fa-git-alt fa-7x" style="color: #f1502f;"></i>
+                        <i class="fa-brands fa-github fa-7x" style="color: #000000;"></i>
+                    </a>
+                </div>
+                <span class="spanSkills">Git/GitHub</span>
+            </div>
+
+            <div class="skillCard">
+                <i class="fa-brands fa-angular fa-7x" style="color: #b52e31;"></i>
+                <span class="spanSkills">Angular</span>
+            </div>
         </div>
     </section>
 
@@ -101,11 +128,39 @@
     </section>
 
     <section id="formations">
-
+        <div>
+        <h2>FORMATIONS</h2>
+        <div class="formation">
+            <div>
+                <h4 class="formationTitle">Lycée St-Martin</h4>
+                <span class="formationSubTitle">BAC-PRO artisanat et metiers d'arts</span><br>
+                <span class="formationYear">De septembre 2014 à juin 2017</span>
+            </div>
+                <span class="diplome" >Diplome obtenu <i class="fa-solid fa-check" style="color: #26cb10;"></i></span>
+        </div>
+        <div class="formation">
+            <div>
+                <h4 class="formationTitle">OpenClassRooms</h4>
+                <span class="formationSubTitle">Formation en ligne de developpeur web</span><br>
+                <span class="formationYear">De decembre 2022 à aout 2023</span>
+            </div>
+            <span class="diplome" >Diplome en cours d'obtention <i class="fa-solid fa-hourglass-half" style="color: #a25516;"></i></span>
+        </div>
+        </div>
+        <img id="studyPng" src="./images/vecteezy_studying-book-illustration_18246021_108.png" alt="">
+       
     </section>
 
     <footer id="contact&rs">
-
+        <div id="contact">
+            <i class="fa-solid fa-envelope fa-5x" style="color: #ffffff;"></i><span id="mail">schneiderdiwan@gmail.com</span>
+        </div>
+        <div id="trait"></div>
+        <div id="rs">
+            <a href="https://twitter.com/DiwanSchneider" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-twitter fa-5x" style="color: #ffffff;"></i></a>
+            <a href="https://www.linkedin.com/in/diwan-s-947aa2133" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-linkedin fa-5x" style="color: #ffffff;"></i></a>
+            <a href="https://github.com/Diwans" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github fa-5x" style="color: #ffffff;"></i></a>
+        </div>
     </footer>
 </body>
 </html>
