--- a/index.html
+++ b/index.html
@@ -35,38 +35,38 @@
         <div class="cardLine">
 
             <div class="skillCard">
-                <a href="#projetJs"><i class="fa-brands fa-square-js fa-7x" style="color: #f7df1e;"></i></a>
+                <a href="#projetJs"><i class="fa-brands fa-square-js fa-7x iconSize" style="color: #f7df1e;"></i></a>
                 <span class="spanSkills">Javascript</span>
             </div>
 
             <div class="skillCard">
-                <a href="#projetReact"><i class="fa-brands fa-react fa-7x" style="color: #61dbfb;"></i></a>
+                <a href="#projetReact"><i class="fa-brands fa-react fa-7x iconSize" style="color: #61dbfb;"></i></a>
                 <span class="spanSkills">React</span>
             </div>
 
             <div class="skillCard">
-                <i class="fa-brands fa-sass fa-7x" style="color: #cd6799;"></i>
+                <i class="fa-brands fa-sass fa-7x iconSize" style="color: #cd6799;"></i>
                 <span class="spanSkills">Sass</span></div>
             </div>
 
         <div class="cardLine">
 
             <div class="skillCard">
-                <a href="#projetNodejs"><i class="fa-brands fa-node-js fa-7x" style="color: #3c873a;"></i></a>
+                <a href="#projetNodejs"><i class="fa-brands fa-node-js fa-7x iconSize" style="color: #3c873a;"></i></a>
                 <span class="spanSkills">NodeJs</span></div>
 
             <div class="skillCard">
                 <div class="divGit">
                     <a href="https://github.com/Diwans" target="_blank">
-                        <i class="fa-brands fa-git-alt fa-7x" style="color: #f1502f;"></i>
-                        <i class="fa-brands fa-github fa-7x" style="color: #000000;"></i>
+                        <i class="fa-brands fa-git-alt fa-7x iconSize" style="color: #f1502f;"></i>
+                        <i class="fa-brands fa-github fa-7x iconSize" style="color: #000000;"></i>
                     </a>
                 </div>
                 <span class="spanSkills">Git/GitHub</span>
             </div>
 
             <div class="skillCard">
-                <i class="fa-brands fa-angular fa-7x" style="color: #b52e31;"></i>
+                <i class="fa-brands fa-angular fa-7x iconSize" style="color: #b52e31;"></i>
                 <span class="spanSkills">Angular</span>
             </div>
         </div>
