--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <h3>Projet de création d'une page web dynamique pour une photographe. (projet formation)</h3><br>
                 <div class="real">
                     <p>projet réalisé avec :</p>
-                    <i class="fa-brands fa-square-js fa-2x" style="color: #f7df1e;"></i>
+                    <i class="fa-brands fa-square-js fa-2x realIcon" style="color: #f7df1e;"></i>
                 </div>
             </div>
 
@@ -98,8 +98,8 @@
                 <h3>Projet de création d'une application de location immobilière. (projet formation)</h3><br>
                 <div class="real">
                     <p>projet réalisé avec :</p>
-                    <i class="fa-brands fa-react fa-2x" style="color: #61dbfb;"></i>
-                    <i class="fa-brands fa-sass fa-2x" style="color: #cd6799;"></i>
+                    <i class="fa-brands fa-react fa-2x realIcon" style="color: #61dbfb;"></i>
+                    <i class="fa-brands fa-sass fa-2x realIcon" style="color: #cd6799;"></i>
                 </div>
             </div>
 
@@ -116,7 +116,7 @@
                 <h3>Projet de création du back-end d'un site de notation de livre. (projet formation)</h3><br>
                 <div class="real">
                     <p>projet réalisé avec :</p>
-                    <i class="fa-brands fa-node-js fa-2x" style="color: #3c873a;"></i>
+                    <i class="fa-brands fa-node-js fa-2x realIcon" style="color: #3c873a;"></i>
                 </div>
             </div>
 
@@ -129,7 +129,7 @@
 
     <section id="formations">
         <div>
-        <h2>FORMATIONS</h2>
+        <h2 class="fTitle">FORMATIONS</h2>
         <div class="formation">
             <div>
                 <h4 class="formationTitle">Lycée St-Martin</h4>
