--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
     <footer id="contact&rs">
         <div id="contact">
-            <i class="fa-solid fa-envelope fa-5x" style="color: #ffffff;"></i><span id="mail">schneiderdiwan@gmail.com</span>
+            <i class="fa-solid fa-envelope mailIcon" style="color: #ffffff;"></i><span id="mail">schneiderdiwan@gmail.com</span>
         </div>
         <div id="trait"></div>
         <div id="rs">
