--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PortFolio Diwan SCHNEIDER</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="mediaQuery.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
@@ -73,12 +74,23 @@
     </section>
 
     <section id="projets">
-
+        <h2 class="projetsTitle">PROJETS</h2>
         <div id="projetJs"></div>
         <div id="projetJsTitle">
 
             <div>
                 <h3>Projet de création d'une page web dynamique pour une photographe. (projet formation)</h3><br>
+                <p class="description">Ma mission dans ce projet était de rendre cette page web dynamique avec le langage JavaScript et d'y intégrer l'utilisation d'une API pour recupérer des données depuis celle ci au lieu de les intégrer directement via le HTML. J'ai aussi creer la page de connexion pour l'administrateur ( client ) du site a partir de zero et j'ai également developpé une modale permettant de gerer depuis le site les medias que le client voudrais soit ajouter, consulter, supprimer ou modifier.</p>
+                <h4 class="titreDescription">Difficultés rencontrées durants le projet :</h4>
+                <ul class="listDescription">
+                    <li>apprentissage du langage JavaScript</li>
+                </ul>
+                <h4 class="titreDescription">Compétences developpées :</h4>
+                <ul class="listDescription">
+                    <li>manipulations des éléments du DOM avec JS</li>
+                    <li>utilisation d'une API avec JS</li>
+                    <li>rendre une page web dynamique </li>
+                </ul>
                 <div class="real">
                     <p>projet réalisé avec :</p>
                     <i class="fa-brands fa-square-js fa-2x realIcon" style="color: #f7df1e;"></i>
@@ -91,11 +103,26 @@
             </div>
         </div>
 
+        <div class="trait"></div>
+
         <div id="projetReact"></div>
         <div id="projetReactTitle">
 
             <div>
                 <h3>Projet de création d'une application de location immobilière. (projet formation)</h3><br>
+                <p class="description">Realisation d'une application React a l'aide de la maquette fournie et integration d'une API pour le site via une simulation a partir d'un fichier JSON. </p>
+                <h4 class="titreDescription">Difficultés rencontrées durants le projet :</h4>
+                <ul class="listDescription">
+                    <li>utilisation et intégration de données à partir d'un fichier JSON simulant une API</li>
+                    <li>prise en main de l'architecture d'un projet React via le système de composants</li>
+                </ul>
+                <h4 class="titreDescription">Compétences developpées :</h4>
+                <ul class="listDescription">
+                    <li>initialisation d'une application avec Create React App</li>
+                    <li>mise en place d'une navigation avec React Router</li>
+                    <li>apprentissage de Sass</li>
+                    <li>animations css basique</li>
+                </ul>
                 <div class="real">
                     <p>projet réalisé avec :</p>
                     <i class="fa-brands fa-react fa-2x realIcon" style="color: #61dbfb;"></i>
@@ -109,11 +136,25 @@
             </div>
         </div>
 
+        <div class="trait"></div>
+
         <div id="projetNodejs"></div>
         <div id="projetNodeJsTitle">
 
             <div>
                 <h3>Projet de création du back-end d'un site de notation de livre. (projet formation)</h3><br>
+                <p class="description">Creation du back-end et de l'API CRUD d'un site de notation de livre qui comprends la creation, la modification, la consultation et la suppression des livres. J'ai pu également mettre en place un système de compte utilisateur avec la l'inscription et la connexion .</p>
+                <h4 class="titreDescription">Difficultés rencontrées durants le projet :</h4>
+                <ul class="listDescription">
+                    <li>le manque de flexibilité de NodeJS</li>
+                </ul>
+                <h4 class="titreDescription">Compétences developpées :</h4>
+                <ul class="listDescription">
+                    <li>familiarisations avec l'utilisation d'une base de données NoSQL ( MongoDB )</li>
+                    <li>mise en place d'une API CRUD</li>
+                    <li>mise en place d'un système de compte utilisateurs ( avec l'inscription et la connection )</li>
+                    <li>introduction a certains process garantissant la sécurité du site et la confidentialité des utilisateurs</li>
+                </ul>
                 <div class="real">
                     <p>projet réalisé avec :</p>
                     <i class="fa-brands fa-node-js fa-2x realIcon" style="color: #3c873a;"></i>
@@ -135,6 +176,7 @@
                 <h4 class="formationTitle">Lycée St-Martin</h4>
                 <span class="formationSubTitle">BAC-PRO artisanat et metiers d'arts</span><br>
                 <span class="formationYear">De septembre 2014 à juin 2017</span>
+                <p class="formationDescription">Baccalauréat artistique, où j'ai pu apprendre à developper une identité visuelle, les codes du graphismes et à éveiller et developper mon sens critique.</p>
             </div>
                 <span class="diplome" >Diplome obtenu <i class="fa-solid fa-check" style="color: #26cb10;"></i></span>
         </div>
@@ -143,11 +185,11 @@
                 <h4 class="formationTitle">OpenClassRooms</h4>
                 <span class="formationSubTitle">Formation en ligne de developpeur web</span><br>
                 <span class="formationYear">De decembre 2022 à aout 2023</span>
+                <p class="formationDescription">En décembre 2022 et jusqu'en aout 2023, j'ai eu la chance de faire partie de la formation "developpeur web" de <a class="blueLink"  href="https://openclassrooms.com/fr/paths/717-developpeur-web" target="_blank">OpenClassrooms <i class="fa-solid fa-up-right-from-square" style="color: #1f71ff;"></i></a>. Cette formation m'a permis d'acquerir et de developper toutes les compétences nécessaires pour devenir developpeur web. Plutot orienté front-end, cette formation m'a également introduit au back-end et m'a fait decouvrir tous l'ecosystème qui gravite autour du metier de developpeur web grace a 8 projets traitant chacuns d'une thematique bien precise de celui-ci.<br>Je suis aujourd'hui theoriquement capable de creer un site de A-Z, grace aux differents languages et process inculquer durant la formation. A ce jour je continue de d'apprendre au quotidien par mes propres moyens pour approfondir ces compétences et continuer d'evoluer.<br>Cette formation a été une vrai opportunité pour moi, et m'a permis de mettre un pied dans le monde du developpement. Je suis aujourd'hui sur de continuer dans cette voie.</p>
             </div>
             <span class="diplome" >Diplome en cours d'obtention <i class="fa-solid fa-hourglass-half" style="color: #a25516;"></i></span>
         </div>
         </div>
-        <img id="studyPng" src="./images/vecteezy_studying-book-illustration_18246021_108.png" alt="">
        
     </section>
 
