--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <h1 class="prenom">Diwan</h1>
             <h2 class="nom">SCHNEIDER</h2>
             <h2 class="work">developpeur web junior</h2>
-            <p class="presentation">Developpeur junior qui sors de formation, cela fait maintenant presque 1 an que je suis rentré dans le monde du dev et que je m'epanoui dans celu-ci. J'ai d'abord commencé en autodidacte avec le HTML/CSS puis j'ai vite senti le besoin d'aller plus vite et plus loin dans ce domaine. C'est alors que j'ai rejoins la formation developpeur web de OpenClassRooms en aout 2022.</p>
+            <p class="presentation">Développeur junior qui sort de formation, cela fait maintenant presque 1 an que je suis rentré dans le monde du de et que je m'épanouis dans celui-ci. J'ai d'abord commencé en autodidacte avec le HTML/CSS puis j'ai vite senti le besoin d'aller plus vite et plus loin dans ce domaine. C'est alors que j'ai rejoint la formation développeur web d'OpenClassRooms en aout 2022.</p>
         </div>
     </header>
 
@@ -80,12 +80,12 @@
 
             <div>
                 <h3>Projet de création d'une page web dynamique pour une photographe. (projet formation)</h3><br>
-                <p class="description">Ma mission dans ce projet était de rendre cette page web dynamique avec le langage JavaScript et d'y intégrer l'utilisation d'une API pour recupérer des données depuis celle ci au lieu de les intégrer directement via le HTML. J'ai aussi creer la page de connexion pour l'administrateur ( client ) du site a partir de zero et j'ai également developpé une modale permettant de gerer depuis le site les medias que le client voudrais soit ajouter, consulter, supprimer ou modifier.</p>
-                <h4 class="titreDescription">Difficultés rencontrées durants le projet :</h4>
+                <p class="description">Ma mission dans ce projet était de rendre cette page web dynamique avec le langage Javascript et d'y intégrer l'utilisation d'une API pour récupérer des données depuis celle-ci au lieu de les intégrer directement via le HTML. J'ai aussi créer la page de connexion pour l'administrateur ( client) du site à partir de zéro et j'ai également développé une modale permettant de gérer depuis le site les medias que le client voudrait soit ajouter, consulter, supprimer ou modifier.</p>
+                <h4 class="titreDescription">Difficultés rencontrées durant le projet :</h4>
                 <ul class="listDescription">
                     <li>apprentissage du langage JavaScript</li>
                 </ul>
-                <h4 class="titreDescription">Compétences developpées :</h4>
+                <h4 class="titreDescription">Compétences développées :</h4>
                 <ul class="listDescription">
                     <li>manipulations des éléments du DOM avec JS</li>
                     <li>utilisation d'une API avec JS</li>
@@ -110,13 +110,13 @@
 
             <div>
                 <h3>Projet de création d'une application de location immobilière. (projet formation)</h3><br>
-                <p class="description">Realisation d'une application React a l'aide de la maquette fournie et integration d'une API pour le site via une simulation a partir d'un fichier JSON. </p>
-                <h4 class="titreDescription">Difficultés rencontrées durants le projet :</h4>
+                <p class="description">Réalisation d'une application React à l'aide de la maquette fournie et intégration d'une API pour le site via une simulation à partir d'un fichier JSON.</p>
+                <h4 class="titreDescription">Difficultés rencontrées durant le projet :</h4>
                 <ul class="listDescription">
                     <li>utilisation et intégration de données à partir d'un fichier JSON simulant une API</li>
                     <li>prise en main de l'architecture d'un projet React via le système de composants</li>
                 </ul>
-                <h4 class="titreDescription">Compétences developpées :</h4>
+                <h4 class="titreDescription">Compétences développées :</h4>
                 <ul class="listDescription">
                     <li>initialisation d'une application avec Create React App</li>
                     <li>mise en place d'une navigation avec React Router</li>
@@ -143,17 +143,17 @@
 
             <div>
                 <h3>Projet de création du back-end d'un site de notation de livre. (projet formation)</h3><br>
-                <p class="description">Creation du back-end et de l'API CRUD d'un site de notation de livre qui comprends la creation, la modification, la consultation et la suppression des livres. J'ai pu également mettre en place un système de compte utilisateur avec la l'inscription et la connexion .</p>
-                <h4 class="titreDescription">Difficultés rencontrées durants le projet :</h4>
+                <p class="description">Création du back-end et de l'API CRUD d'un site de notation de livre qui comprend la création, la modification, la consultation et la suppression des livres. J'ai pu également mettre en place un système de compte utilisateur avec là l'inscription et la connexion.</p>
+                <h4 class="titreDescription">Difficultés rencontrées durant le projet :</h4>
                 <ul class="listDescription">
-                    <li>le manque de flexibilité de NodeJS</li>
+                    <li>le manque de flexibilité de Node JS</li>
                 </ul>
-                <h4 class="titreDescription">Compétences developpées :</h4>
+                <h4 class="titreDescription">Compétences développées :</h4>
                 <ul class="listDescription">
-                    <li>familiarisations avec l'utilisation d'une base de données NoSQL ( MongoDB )</li>
+                    <li>familiarisation avec l'utilisation d'une base de données NoSQL ( MongoDb )</li>
                     <li>mise en place d'une API CRUD</li>
                     <li>mise en place d'un système de compte utilisateurs ( avec l'inscription et la connection )</li>
-                    <li>introduction a certains process garantissant la sécurité du site et la confidentialité des utilisateurs</li>
+                    <li>introduction à certains process garantissant la sécurité du site et la confidentialité des utilisateurs</li>
                 </ul>
                 <div class="real">
                     <p>projet réalisé avec :</p>
@@ -174,20 +174,20 @@
         <div class="formation">
             <div>
                 <h4 class="formationTitle">Lycée St-Martin</h4>
-                <span class="formationSubTitle">BAC-PRO artisanat et metiers d'arts</span><br>
+                <span class="formationSubTitle">BAC-PRO artisanat et métiers d'art</span><br>
                 <span class="formationYear">De septembre 2014 à juin 2017</span>
-                <p class="formationDescription">Baccalauréat artistique, où j'ai pu apprendre à developper une identité visuelle, les codes du graphismes et à éveiller et developper mon sens critique.</p>
+                <p class="formationDescription">Baccalauréat artistique, où j'ai pu apprendre à développer une identité visuelle, les codes du graphisme et à éveiller et développer mon sens critique.</p>
             </div>
                 <span class="diplome" >Diplome obtenu <i class="fa-solid fa-check" style="color: #26cb10;"></i></span>
         </div>
         <div class="formation">
             <div>
                 <h4 class="formationTitle">OpenClassRooms</h4>
-                <span class="formationSubTitle">Formation en ligne de developpeur web</span><br>
-                <span class="formationYear">De decembre 2022 à aout 2023</span>
-                <p class="formationDescription">En décembre 2022 et jusqu'en aout 2023, j'ai eu la chance de faire partie de la formation "developpeur web" de <a class="blueLink"  href="https://openclassrooms.com/fr/paths/717-developpeur-web" target="_blank">OpenClassrooms <i class="fa-solid fa-up-right-from-square fa-xs" style="color: #1f71ff;"></i></a>. Cette formation m'a permis d'acquerir et de developper toutes les compétences nécessaires pour devenir developpeur web. Plutot orienté front-end, cette formation m'a également introduit au back-end et m'a fait decouvrir tous l'ecosystème qui gravite autour du metier de developpeur web grace a 8 projets traitant chacuns d'une thematique bien precise de celui-ci.<br>Je suis aujourd'hui theoriquement capable de creer un site de A-Z, grace aux differents languages et process inculquer durant la formation. A ce jour je continue de d'apprendre au quotidien par mes propres moyens pour approfondir ces compétences et continuer d'evoluer.<br>Cette formation a été une vrai opportunité pour moi, et m'a permis de mettre un pied dans le monde du developpement. Je suis aujourd'hui sur de continuer dans cette voie.</p>
+                <span class="formationSubTitle">Formation en ligne de développeur web</span><br>
+                <span class="formationYear">De décembre 2022 à aout 2023</span>
+                <p class="formationDescription">En décembre 2022 et jusqu'en aout 2023, j'ai eu la chance de faire partie de la formation "développeur web" de<a class="blueLink"  href="https://openclassrooms.com/fr/paths/717-developpeur-web" target="_blank">OpenClassrooms <i class="fa-solid fa-up-right-from-square fa-xs" style="color: #1f71ff;"></i></a>. Cette formation m'a permis d'acquérir et de développer toutes les compétences nécessaires pour devenir développeur web. Plutôt orienté front-end, cette formation m'a également introduit au back-end et m'a fait découvrir tous l'écosystème qui gravite autour du métier de développeur web grace à 8 projets traitants chacun d'une thématique bien précise de celui-ci.<br>Je suis aujourd'hui théoriquement capable de créer un site d'A-Z, grace aux différents languages et processus inculquer durant la formation. À ce jour je continue dé d'apprendre au quotidien par mes propres moyens pour approfondir ses compétences et continuer d'évoluer.<br>Cette formation a été une vraie opportunité pour moi, et m'a permis de mettre un pied dans le monde du développement. Je suis aujourd'hui sur de continuer dans cette voie.</p>
             </div>
-            <span class="diplome" >Diplome en cours d'obtention <i class="fa-solid fa-hourglass-half" style="color: #a25516;"></i></span>
+            <span class="diplome" >Diplôme en cours d'obtention <i class="fa-solid fa-hourglass-half" style="color: #a25516;"></i></span>
         </div>
         </div>
        
