--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <h1 class="prenom">Diwan</h1>
             <h2 class="nom">SCHNEIDER</h2>
             <h2 class="work">developpeur web junior</h2>
-            <p class="presentation">Développeur junior qui sort de formation, cela fait maintenant presque 1 an que je suis rentré dans le monde du de et que je m'épanouis dans celui-ci. J'ai d'abord commencé en autodidacte avec le HTML/CSS puis j'ai vite senti le besoin d'aller plus vite et plus loin dans ce domaine. C'est alors que j'ai rejoint la formation développeur web d'OpenClassRooms en aout 2022.</p>
+            <p class="presentation">Développeur web junior, cela fait maintenant plus de 1 an que je suis rentré dans le monde du de et que je m'épanouis dans celui-ci. J'ai d'abord commencé en autodidacte avec le HTML/CSS puis j'ai vite senti le besoin d'aller plus vite et plus loin dans ce domaine. J'ai alors rejoint la formation développeur web d'OpenClassRooms en decembre 2022 et l'ai validé en aout 2023. Je suis actuellement a la recherche d'une entreprise en alternance afin de continuer a me perfectionner et acquérir une première expérience professionnelle.</p>
         </div>
     </header>
 
